css/style.css
/* ... */
@keyframes action {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-15px);
  }
}

.navbar-dark {
  display: none;
}

.navbar-dark .navbar-nav .nav-link {
  padding: 25px 10px;
  color: #FFFFFF;
  letter-spacing: 1px;
  text-transform: uppercase;
  font-weight: 600;
  outline: none;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link.active {
  color: #e83e8c;
}

@media (max-width: 991.98px) {
  .navbar-dark .navbar-nav .nav-link {
    padding: 10px 0;
  }
}

.carousel-caption {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.section-title {
  margin-bottom: 30px;
}

.section-title::before {
  position: absolute;
  content: "";
  width: 60px;
  height: 2px;
  bottom: 11px;
  left: calc(50% - 80px);
  background: #e83e8c;
}

.section-title::after {
  position: absolute;
  content: "";
  width: 60px;
  height: 2px;
  bottom: 11px;
  right: calc(50% - 80px);
  background: #e83e8c;
}

.btn-play {
  position: relative;
  margin-top: 50px;
  display: block;
  box-sizing: content-box;
  width: 16px;
  height: 26px;
  border-radius: 100%;
  border: none;
  outline: none !important;
  padding: 18px 20px 20px 28px;
  background: #FFFFFF;
}

.btn-play:before {
  content: "";
  position: absolute;
  z-index: 0;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  display: block;
  width: 60px;
  height: 60px;
  background: #FFFFFF;
  border-radius: 100%;
  animation: pulse-border 1500ms ease-out infinite;
}

.btn-play:after {
  content: "";
  position: absolute;
  z-index: 1;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  display: block;
  width: 60px;
  height: 60px;
  background: #FFFFFF;
  border-radius: 100%;
  transition: all 200ms;
}

.btn-play span {
  display: block;
  position: relative;
  z-index: 3;
  width: 0;
  height: 0;
  left: -1px;
  border-left: 16px solid #e83e8c;
  border-top: 11px solid transparent;
  border-bottom: 11px solid transparent;
}

@keyframes pulse-border {
  0% {
    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
    opacity: 1;
  }
  100% {
    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(2);
    opacity: 0;
  }
}

#videoModal .modal-dialog {
  position: relative;
  max-width: 800px;
  margin: 60px auto 0 auto;
}

#videoModal .modal-body {
  position: relative;
  padding: 0px;
}

#videoModal .close {
  position: absolute;
  width: 30px;
  height: 30px;
  right: 0px;
  top: -30px;
  z-index: 999;
  font-size: 30px;
  font-weight: normal;
  color: #ffffff;
  background: #000000;
  opacity: 1;
}

.timeline .row {
  position: relative;
  margin-bottom: 30px;
}

@media (min-width: 768px) {
  .timeline::after {
    position: absolute;
    content: "";
    width: 2px;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -1px;
    background: #e83e8c;
  }
  .timeline .row::before {
    content: "";
    position: absolute;
    width: 30px;
    height: 30px;
    top: calc(50% - 15px);
    left: calc(50% - 15px);
    background: #FFFFFF;
    border: 2px solid #e83e8c;
    transform: rotate(45deg);
    z-index: 1;
  }
  .timeline .row::after {
    content: "\f004";
    font-family: "Font Awesome 5 Free";
    font-weight: 400;
    position: absolute;
    top: calc(50% - 10px);
    left: calc(50% - 8px);
    color: #e83e8c;
    z-index: 2;
  }
}

.gallery-item {
  position: relative;
  overflow: hidden;
}

.gallery-item img {
  transition: .5s;
}

.gallery-item:hover img {
  transform: scale(1.2);
}

.gallery-item a {
  position: absolute;
  width: 60px;
  height: 60px;
  top: calc(50% - 30px);
  left: calc(50% - 30px);
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #FFFFFF;
  text-decoration: none;
  transition: .5s;
  opacity: 0;
}

.gallery-item:hover a {
  opacity: 1;
}

.bg-gallery {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/gallery.jpg), no-repeat center center;
  background-size: cover;
}

.gallery-carousel .owl-nav {
  position: absolute;
  width: 135px;
  height: 60px;
  top: -90px;
  left: calc(50% - 67px);
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 1;
}

.gallery-carousel .owl-nav .owl-prev,
.gallery-carousel .owl-nav .owl-next {
  width: 60px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #e83e8c;
  background: #FFFFFF;
  font-size: 30px;
}

@media (max-width: 767.98px) {
  #event .border-right {
    border-right: none !important;
  }
  #ewallet .border-right {
    border-right: none !important;
  }
}

/* Define the blinking animation */
@keyframes blink {
  0% { opacity: 1; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

/* Apply the blinking animation to the text */
.blinking-text {
  animation: blink 3s infinite; /* 1s duration, infinite loop */
  color: var(--primary);
}


/* Style for the popup */
#welcomePopup {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  background-color: #fff;
  border: 1px solid #ccc;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  z-index: 1000;
}


#loading-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.8);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
}

#loading-indicator {
  border: 8px solid #f3f3f3;
  border-top: 8px solid var(--primary);
  border-radius: 50%;
  width: 50px;
  height: 50px;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.collapsible {
  background-color: #f1f1f1;
  cursor: pointer;
  padding: 10px;
  text-align: left;
  border: none;
  outline: none;
  width: 100%;
  transition: background-color 0.3s; /* Add transition effect to background-color */
}
/* ... */

